[gd_scene load_steps=3 format=3 uid="uid://cbxsfqom3j2ck"]

[ext_resource type="Script" path="res://scenes/food/food.gd" id="1_xgvkt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4540u"]
radius = 16.0

[node name="Food" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_xgvkt")

[node name="Cell" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4540u")

[node name="Nutriment" type="Sprite2D" parent="."]

[node name="ExpirationTimer" type="Timer" parent="."]

[connection signal="attract_food" from="." to="." method="_on_attract_food"]
[connection signal="eat_food" from="." to="." method="_on_eat_food"]
[connection signal="timeout" from="ExpirationTimer" to="." method="_on_expiration_timer_timeout"]
